@@ -83,6 +83,8 @@ signals:
 #if DVDNAV_SUPPORT
 	void receivedDVDTitle(int);
 	void receivedDuration(double);
+	void receivedTitleIsMenu();
+	void receivedTitleIsMovie();
 #endif
 
 protected slots:
